# mathematics

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Mathematical operators and symbols in Unicode.txt  README.md
JL/: CMakeLists.txt
JL/geometry/: CMakeLists.txt  InfiniteRegularGrid.h  Ply.h  Point.h  Random.h
JL/geometry/detail/: InfiniteRegularGrid.inl  Ply.inl  Point.inl
JL/geometryTest/: CMakeLists.txt  InfiniteRegularGridTest.cpp  PlyTest.cpp  PointTest.cpp  main.cpp
JL/matrix/: CMakeLists.txt  LinearTransformation.h  Matrix.h  RandomMatrix.h
JL/matrix/detail/: Matrix.inl
JL/matrixTest/: CMakeLists.txt  LinearTransformationTest.cpp  MatrixTest.cpp  main.cpp
JL/utils/: CMakeLists.txt  Utils.h
JL/utils/src/: Utils.cpp
Libraries/: CMakeLists.txt
Libraries/tinyply/src/: tinyply.cpp
Libraries/tinyplyTest/: CMakeLists.txt  tests.cpp
Libs/tinyply/: CMakeLists.txt
Libs/tinyply/src/: tinyply.cpp
Libs/tinyplyTest/: example.cpp  tests.cpp
Toolchain/: settings.cmake
geom/: Vec.h  Vector.h
geomTest/: test.cpp
geometry/: CMakeLists.txt  Point.h  Random.h  Vector.h
geometryTest/: CMakeLists.txt  PointTest.cpp  main.cpp  test.cpp
